# DI-sample

./: .bazelrc  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: go.yml
auth/: BUILD.bazel  handler.go  jwks.go  repository.go  repository_memory.go
cmd/console/: BUILD.bazel
cmd/server/: BUILD.bazel  main.go
driver/: BUILD.bazel  driver.go  middleware.go  registry.go  registry_base.go  registry_memory.go
health/: BUILD.bazel  handler.go  type.go
internal/admin/: BUILD.bazel  admin.go  repository.go  repository_memory.go
notification/: BUILD.bazel  handler.go  repository.go  repository_memory.go  type.go
