load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "driver.go",
        "middleware.go",
        "registry.go",
        "registry_base.go",
        "registry_memory.go",
    ],
    importpath = "github.com/sawadashota/di-sample/driver",
    visibility = ["//visibility:public"],
    deps = [
        "//auth:go_default_library",
        "//health:go_default_library",
        "//internal/admin:go_default_library",
        "//notification:go_default_library",
        "@com_github_auth0_go_jwt_middleware//:go_default_library",
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_meatballhat_negroni_logrus//:go_default_library",
        "@com_github_ory_herodot//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_urfave_negroni//:go_default_library",
    ],
)
