load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "handler.go",
        "type.go",
    ],
    importpath = "github.com/sawadashota/di-sample/health",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_ory_herodot//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
