load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "admin.go",
        "repository.go",
        "repository_memory.go",
    ],
    importpath = "github.com/sawadashota/di-sample/internal/admin",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)
